[gd_scene load_steps=8 format=3 uid="uid://diarbwmvvt7ey"]

[ext_resource type="Script" path="res://globals/music_manager.gd" id="1_l5pko"]
[ext_resource type="AudioStream" uid="uid://dvoqhrthuljr1" path="res://audio/Build01.wav" id="2_bea6d"]
[ext_resource type="AudioStream" uid="uid://ba1h3658pcro7" path="res://audio/Build02.wav" id="3_es3xi"]
[ext_resource type="AudioStream" uid="uid://7ukqja8083nd" path="res://audio/Chase01.wav" id="4_q1mmp"]
[ext_resource type="AudioStream" uid="uid://bgbpgaphhj2ad" path="res://audio/Stop_01.wav" id="5_87d3h"]
[ext_resource type="AudioStream" uid="uid://b47uq0xkgq6kk" path="res://audio/Chase02.wav" id="5_kwivo"]
[ext_resource type="AudioStream" uid="uid://b7fmffljr3jt2" path="res://audio/TransitionTo02.wav" id="6_llrrm"]

[node name="MusicManager" type="Node"]
script = ExtResource("1_l5pko")

[node name="Build1Player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_bea6d")

[node name="Build2Player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_es3xi")

[node name="Chase1Player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_q1mmp")

[node name="Chase2Player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_kwivo")

[node name="StopPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_87d3h")

[node name="Transition" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_llrrm")

[connection signal="finished" from="Build1Player" to="." method="_on_build_1_player_finished"]
